# spec-check

./: Cargo.toml  README.md
example/spec/: lib.md
example/src/: lib.rs
src/: comparator.rs  config.rs  file_walker.rs  main.rs  markdown_parser.rs  reporter.rs  rust_parser.rs
